--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,35 +1,10 @@
 ---
 ---
 // 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
-@import "bootstrap/functions";
+@import "bootstrap/bootstrap";
 
 // 2. Include any default variable overrides here
 // $primary: #89A55D;
 
-// 3. Include remainder of required Bootstrap stylesheets (including any separate color mode stylesheets)
-@import "bootstrap/variables";
-@import "bootstrap/variables-dark";
-
-// 4. Include any default map overrides here
-
-// 5. Include remainder of required parts
-@import "bootstrap/maps";
-@import "bootstrap/mixins";
-@import "bootstrap/root";
-
-// 6. Include any other optional stylesheet partials as desired; list below is not inclusive of all available stylesheets
-@import "bootstrap/utilities";
-@import "bootstrap/reboot";
-@import "bootstrap/type";
-@import "bootstrap/images";
-@import "bootstrap/containers";
-@import "bootstrap/grid";
-@import "bootstrap/helpers";
-// ...
-
-// 7. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
-// @import "bootstrap/utilities/api";
-
-// 8. Add additional custom code here
-
+// 3. Add additional custom code here
 @import "base";
