--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 <html lang="{{ site.language }}" data-bs-theme="light">
   {% include head.html %}
 <body>
-  {% include nav.html %}
+  {% include header.html %}
   <main>
     {{ content }}
   </main>
