--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,16 @@
 <div class="container">
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"> 
-        <img src="{{ site.logosmall }}" width="32" height="40" aria-hidden="true">
+        <img src="{{ site.logo-small }}" width="32" height="40" aria-hidden="true">
         <span class="fs-4">{{ site.title }}</span> </a> 
         <ul class="nav nav-pills">
-            <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
-            <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
+            <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Start</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Tjänster</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Produkter</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Kunskapsbank</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Nyheter</a></li>
+            <li class="nav-item"><a href="/about" class="nav-link">Om Oss</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Kontakt</a></li>
         </ul>
     </header>
 </div>
