--- a/_includes/footer-scripts.html
+++ b/_includes/footer-scripts.html
@@ -1,4 +1,8 @@
 <script src="{{ '/assets/js/bootstrap.bundle.min.js' | relative_url }}"></script>
+
+<!-- Script for changing navbar background on scroll -->
+<script src="{{ '/assets/js/navbar.js' | relative_url }}"></script>
+
 <noscript>
     <div class="alert alert-danger" role="alert">
         JavaScript is disabled.
