--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,9 +3,9 @@
   {% include head.html %}
 <body>
   {% include topbar.html %}
-  {% include header.html %}
+  {% include navbar.html %}
   <main>
-    {{ content }}
+        {{ content }}
   </main>
     {% include footer-scripts.html %}
 </body>
