--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,4 +3,5 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{ site.title }}</title>
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/assets/css/all.min.css" | relative_url }}">
 </head>
