--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <div class="container">
-    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom sticky-top">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"> 
         <img src="{{ site.logo-small }}" width="32" height="40" aria-hidden="true">
         <span class="fs-4">{{ site.title }}</span> </a> 
-        <ul class="nav nav-pills">
-            <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Start</a></li>
+        <ul class="nav">
+            <li class="nav-item"><a href="/" class="nav-link" aria-current="page">Start</a></li>
             <li class="nav-item"><a href="#" class="nav-link">Tjänster</a></li>
             <li class="nav-item"><a href="#" class="nav-link">Produkter</a></li>
             <li class="nav-item"><a href="#" class="nav-link">Kunskapsbank</a></li>
