--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,5 +1,8 @@
 ---
 ---
+// Import Bootstrap Icons CSS
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css");
+
 // 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
 @import "bootstrap/bootstrap";
 
