--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,8 +1,8 @@
-<nav class="navbar navbar-expand-lg nav-default sticky-top">
+<nav class="navbar navbar-expand-lg sticky-top">
     <div class="container">
-        <a class="navbar-brand logo text-dark" href="#">
-            <img src="{{ site.logo-small }}" width="32" height="40" aria-hidden="true">
-            {{ site.title }}
+        <a class="navbar-brand logo text-dark" href="/">
+            <img src="{{ site.logo-red }}" width="160" aria-hidden="true">
+            <!-- {{ site.title }} -->
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
@@ -28,7 +28,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="{{ site.linkedin_url }}">
                         <i class="fab fa-linkedin"></i>
                     </a>
                 </li>
