--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,13 +3,9 @@
   {% include head.html %}
 <body>
   {% include topbar.html %}
-  {% include header.html %}
+  {% include navbar.html %}
   <main>
-    <div class="container">
-      <div class="d-flex flex-wrap py-3 mb-4">
         {{ content }}
-      </div>
-    </div>
   </main>
     {% include footer-scripts.html %}
 </body>
