--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -35,13 +35,10 @@ body {
 }
 
 /* Navbar */
-.nav-default {
+.navbar {
     transition:500ms ease;
     background: var(--bg-l3);
     border-bottom: 1px solid rgba(0,0,0,0.1);
-}
-.nav-default.scrolled {
-    background: transparent;
 }
 
 /* Logo styles */
